Refactor: load XGBoost model from JSON instead of pickle

--- a/notebooks/apidae/apidae.ipynb
+++ b/notebooks/apidae/apidae.ipynb
@@ -146,21 +146,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "add84e22",
+   "id": "572b902f-6fd1-4384-a746-50794c9914d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X_train, X_test, y_train, y_test = txm.generate_training_test(full_training_set)"
+    "#full_training_set.to_csv(\"training_set.txt\", index = False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5cfcf41",
+   "id": "add84e22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#txm.compare_models(X_train, X_test, y_train, y_test)"
+    "#X_train, X_test, y_train, y_test = txm.generate_training_test(full_training_set)"
    ]
   },
   {
@@ -181,6 +181,16 @@
    "outputs": [],
    "source": [
     "#model.fit(X_train, y_train, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5cfcf41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model.save_model(\"xgb_model.json\")"
    ]
   },
   {
