--- a/notebooks/arthropoda/arthropoda.ipynb
+++ b/notebooks/arthropoda/arthropoda.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0b648242",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2d48547a-bc68-4298-9181-0d8ebdc63262",
    "metadata": {},
    "outputs": [],
@@ -74,40 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "96a78a02",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GBIF backbone taxonomy data already downloaded.\n",
-      "Processing samples...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gbif_dataset = txm.download_gbif_taxonomy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "600be659",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NCBI taxonomy data already downloaded.\n",
-      "Processing samples...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ncbi_dataset = txm.download_ncbi_taxonomy()"
    ]
@@ -130,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d6852031-d96d-479a-aca2-ba590ae5cced",
    "metadata": {},
    "outputs": [],
@@ -140,130 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "483e1c20-93fd-4151-8510-a3fc5d23177c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>canonicalName</th>\n",
-       "      <th>gbif_id</th>\n",
-       "      <th>ncbi_id</th>\n",
-       "      <th>gbif_rank</th>\n",
-       "      <th>ncbi_rank</th>\n",
-       "      <th>gbif_taxonomy</th>\n",
-       "      <th>ncbi_taxonomy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>566695</th>\n",
-       "      <td>Salix alba</td>\n",
-       "      <td>7882712</td>\n",
-       "      <td>75704</td>\n",
-       "      <td>species</td>\n",
-       "      <td>species</td>\n",
-       "      <td>chordata;ascidiacea;aplousobranchia;polycitoridae;salix;salix alba</td>\n",
-       "      <td>streptophyta;magnoliopsida;malpighiales;salicaceae;salix;salix alba</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>205618</th>\n",
-       "      <td>Bosea psychrotolerans</td>\n",
-       "      <td>11618487</td>\n",
-       "      <td>1871628</td>\n",
-       "      <td>species</td>\n",
-       "      <td>species</td>\n",
-       "      <td>tracheophyta;magnoliopsida;caryophyllales;amaranthaceae;bosea;bosea psychrotolerans</td>\n",
-       "      <td>pseudomonadota;alphaproteobacteria;hyphomicrobiales;boseaceae;bosea;bosea psychrotolerans</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>589774</th>\n",
-       "      <td>Diploderma polygonatum</td>\n",
-       "      <td>10561030</td>\n",
-       "      <td>70539</td>\n",
-       "      <td>species</td>\n",
-       "      <td>species</td>\n",
-       "      <td>basidiomycota;agaricomycetes;boletales;diplocystidiaceae;diploderma;diploderma polygonatum</td>\n",
-       "      <td>chordata;lepidosauria;squamata;agamidae;diploderma;diploderma polygonatum</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126987</th>\n",
-       "      <td>Cyrtostrombidium paralongisomum</td>\n",
-       "      <td>11200089</td>\n",
-       "      <td>1537145</td>\n",
-       "      <td>species</td>\n",
-       "      <td>species</td>\n",
-       "      <td>cyrtostrombidium;cyrtostrombidium paralongisomum</td>\n",
-       "      <td>ciliophora;spirotrichea;cyrtostrombidiidae;cyrtostrombidium;cyrtostrombidium paralongisomum</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125063</th>\n",
-       "      <td>Euplotes daidaleos</td>\n",
-       "      <td>8284379</td>\n",
-       "      <td>471435</td>\n",
-       "      <td>species</td>\n",
-       "      <td>species</td>\n",
-       "      <td>euplotes;euplotes daidaleos</td>\n",
-       "      <td>ciliophora;spirotrichea;euplotida;euplotidae;euplotes;euplotes daidaleos</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          canonicalName   gbif_id  ncbi_id gbif_rank  \\\n",
-       "566695                       Salix alba   7882712    75704   species   \n",
-       "205618            Bosea psychrotolerans  11618487  1871628   species   \n",
-       "589774           Diploderma polygonatum  10561030    70539   species   \n",
-       "126987  Cyrtostrombidium paralongisomum  11200089  1537145   species   \n",
-       "125063               Euplotes daidaleos   8284379   471435   species   \n",
-       "\n",
-       "       ncbi_rank  \\\n",
-       "566695   species   \n",
-       "205618   species   \n",
-       "589774   species   \n",
-       "126987   species   \n",
-       "125063   species   \n",
-       "\n",
-       "                                                                                     gbif_taxonomy  \\\n",
-       "566695                          chordata;ascidiacea;aplousobranchia;polycitoridae;salix;salix alba   \n",
-       "205618         tracheophyta;magnoliopsida;caryophyllales;amaranthaceae;bosea;bosea psychrotolerans   \n",
-       "589774  basidiomycota;agaricomycetes;boletales;diplocystidiaceae;diploderma;diploderma polygonatum   \n",
-       "126987                                            cyrtostrombidium;cyrtostrombidium paralongisomum   \n",
-       "125063                                                                 euplotes;euplotes daidaleos   \n",
-       "\n",
-       "                                                                                      ncbi_taxonomy  \n",
-       "566695                          streptophyta;magnoliopsida;malpighiales;salicaceae;salix;salix alba  \n",
-       "205618    pseudomonadota;alphaproteobacteria;hyphomicrobiales;boseaceae;bosea;bosea psychrotolerans  \n",
-       "589774                    chordata;lepidosauria;squamata;agamidae;diploderma;diploderma polygonatum  \n",
-       "126987  ciliophora;spirotrichea;cyrtostrombidiidae;cyrtostrombidium;cyrtostrombidium paralongisomum  \n",
-       "125063                     ciliophora;spirotrichea;euplotida;euplotidae;euplotes;euplotes daidaleos  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_inconsistencies.sample(5)"
    ]
@@ -273,7 +133,7 @@
    "id": "d791a166",
    "metadata": {},
    "source": [
-    "## 3.a Training the classifier model"
+    "## 3.a Training the classifier from scratch"
    ]
   },
   {
@@ -286,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "262e9267",
    "metadata": {},
    "outputs": [],
@@ -296,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "3121bb6d",
    "metadata": {},
    "outputs": [],
@@ -306,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "96858b5b-b5fe-400e-8321-dfc5effa0267",
    "metadata": {},
    "outputs": [],
@@ -316,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "2e638cbb-5f25-4b49-8ab4-1ebea0e5b6ce",
    "metadata": {},
    "outputs": [],
@@ -326,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "add84e22",
    "metadata": {},
    "outputs": [],
@@ -336,17 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "d5cfcf41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#txm.compare_models(X_train, X_test, y_train, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "a4428617",
    "metadata": {},
    "outputs": [],
@@ -356,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "560276c3-6c40-41da-af49-6e1a8ed156f5",
    "metadata": {},
    "outputs": [],
@@ -366,12 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "61b6bf3c-08f6-4fb6-8306-a61607836359",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#txm.save_model(model, \"xgb_model\")"
+    "#model.save_model(\"xgb_model.json\")"
    ]
   },
   {
@@ -379,7 +229,7 @@
    "id": "a903f53e-c5b7-44c2-b408-9ed939e8c302",
    "metadata": {},
    "source": [
-    "## 3.b Load a pre-trained model"
+    "## 3.b Compare and load pre-trained models"
    ]
   },
   {
@@ -392,13 +242,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "31c68318-1244-42c1-af18-ab3ebe51fed3",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = txm.load_xgb_model() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "598e2fa7-a36f-4332-8c73-335bf5e770dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae0ce9c7-1eeb-4e3a-b958-80145dbb4b0d",
+   "metadata": {},
+   "source": [
+    "The following steps explain why XGBoost was selected as the default model in TaxonMatch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d1fbbee-e0d8-4cb6-9079-45516e49530f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_training_set = txm.load_training_set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a89b211-8bc5-482b-8d84-53fe09c0b5ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = txm.generate_training_test(full_training_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce5e2f07-fb67-42f0-8e3c-899df10fe80a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results, trained_models = txm.compare_models(X_train, X_test, y_train, y_test, cv_folds=5, random_seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca0a1eb-ef3e-4b28-8d1a-a506c5bc7e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f43e425-d299-4511-9bbd-aa8df7062440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txm.plot_roc_curves(trained_models, X_test, y_test, top_n=10, save_path=\"./roc_top10.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdcc41c4-1c55-487e-9e57-58ff41f23084",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bf7f7f8-f92a-489e-b775-18a36c78469b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -413,12 +345,12 @@
    "id": "e9b3a248-fee2-4673-b484-902214c109e1",
    "metadata": {},
    "source": [
-    "In this section, the focus is on comparing and aligning the taxonomic data from NCBI and GBIF datasets. It specifically targets the taxon \"Arthropoda\" to narrow down the analysis to a specific family of bees. Using a pre-trained machine learning model, the notebook matches records from both datasets, categorizing them as exact matches, unmatched, or potentially mislabeled due to typographical errors"
+    "In this section, the focus is on comparing and aligning the taxonomic data from NCBI and GBIF datasets. It specifically targets the taxon \"Arthropoda\" to narrow down the analysis of this clade. Using a pre-trained machine learning model, the notebook matches records from both datasets, categorizing them as exact matches, unmatched, or potentially mislabeled due to typographical errors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "379a86c6-7c69-46db-94b5-53dc159cb0bd",
    "metadata": {},
    "outputs": [],
@@ -428,19 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4052b9b2-920c-4e52-8ca0-8978bb841779",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mleone1/miniconda3/envs/test_2/lib/python3.12/site-packages/taxonmatch/matching.py:276: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  return pd.concat([matched_df, missing_ncbi_rows], ignore_index=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "matched_df, unmatched_df, possible_typos_df = txm.match_dataset(gbif_arthropoda, ncbi_arthropoda, model, tree_generation = True)"
    ]
@@ -458,7 +381,7 @@
    "id": "78cb8f2a-2a79-4b26-a8d3-cadf50980287",
    "metadata": {},
    "source": [
-    "In the last section, the notebook constructs a taxonomic tree from the matched and unmatched data between the GBIF and NCBI datasets, focusing on the Apidae family. This visual representation helps to illustrate the evolutionary relationships and classification hierarchy among the species. The tree is then converted into a dataframe for further analysis and saved in textual format for documentation and review purposes."
+    "In the last section, the notebook constructs a taxonomic tree from the matched and unmatched data between the GBIF and NCBI datasets, focusing on the Arthropoda phylum. This visual representation helps to illustrate the evolutionary relationships and classification hierarchy among the species. The tree is then converted into a dataframe for further analysis and saved in textual format for documentation and review purposes."
    ]
   },
   {
@@ -585,18 +508,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "7f91f81e-3b0e-49ab-b294-1d816b9413ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tree is saved as TXT in the file: test_tree_final.txt.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "txm.save_tree(inat_tree, \"arthropoda_tree_with_inat.txt\", output_format='txt')"
    ]
